--- a/resources/visualgc.properties
+++ b/resources/visualgc.properties
@@ -1,1 +1,28 @@
+0.last.cause.1={0} Last Cause: {1}
+class.loader.time.0.loaded.1.unloaded.2=Class Loader Time: {0} loaded, {1} unloaded - {2}
+compile.time.0.compiles.1=Compile Time: {0} compiles - {1}
+eden.space=Eden Space
+finalizer.queue.length.maximum.0.current.1.local.maximum.2=Finalizer Queue Length: Maximum {0} Current {1} Local Maximum {2}
+finalizer.time.0.objects.1=Finalizer Time: {0} objects - {1}
+gc.time.0.collections.1=GC Time: {0} collections, {1}
+graph=Graph
+metaspace=Metaspace
+not.supported.for.this.jvm=Not supported for this JVM.
+old.gen=Old Gen
+perm.gen=Perm Gen
+survivor.0=Survivor 0
+survivor.1=Survivor 1
 survivor.age.histogram=Survivor Age Histogram
+collections= collections, 
+old=Old
+perm=Perm
+eden=Eden
+application.information=Application Information
+alive=Alive    
+elapsed.time=Elapsed Time: 
+java.command.line.0=Java Command Line: {0}\n\n
+java.vm.arguments.0=Java VM Arguments: {0}\n\n
+java.vm.flags.0=Java VM Flags: {0}\n\n
+dead=Dead     
+s0=S0
+s1=S1
