--- a/resources/visualgc.properties
+++ b/resources/visualgc.properties
@@ -32,3 +32,15 @@ auto=Auto
 spaces=Spaces
 graphs=Graphs
 histogram=Histogram
+gc.collectors.n.time={0} GC Time:{1}, {2} collections, {3}
+tenuring.threshold=Tenuring Threshold: 
+max.tenuring.threshold=Max Tenuring Threshold: 
+desired.survivor.size=Desired Survivor Size: 
+current.survivor.size=Current Survivor Size: 
+parameters=Parameters
+visualgc.3.0.loading.jvm.process.list=VisualGC 3.0, Loading JVM process list...
+please.choose.a.process=Please choose a process
+a.visual.garbage.collection.monitoring.tool=a Visual Garbage Collection Monitoring Tool 
+info=Info
+this.tool.created.by=This tool created by  https://github.com/beansoftapp/
+gc.policy.is.0=GC Policy is {0}
