--- a/resources/visualgc.properties
+++ b/resources/visualgc.properties
@@ -44,3 +44,5 @@ a.visual.garbage.collection.monitoring.tool=a Visual Garbage Collection Monitori
 info=Info
 this.tool.created.by=This tool created by  https://github.com/beansoftapp/
 gc.policy.is.0=GC Policy is {0}
+double.click.a.jvm.process.to.start=Double click a JVM process to monitor
+jvm.browser=JVM Browser
