--- a/devkit-helper/resources/META-INF/plugin.xml
+++ b/devkit-helper/resources/META-INF/plugin.xml
@@ -9,7 +9,6 @@
         <h2>IDEA Plugin DevKit Helper</h2>
         <p>
             Provides helper features on IDEA Plugin DevKit. <br>
-            For fully functional, please run under IDEA CE and IDEA Ultimate.<br>
             When editing plugin.xml, the CDATA in description and change-notes will be treated as HTML so syntax
             highlighting and tag completion, Edit HTML Fragment editor will work.<br>
             One-click jump from plugin.xml action/extension ref to plugin class code(supports Java, Kotlin) and vise
@@ -55,11 +54,21 @@
     <depends>com.intellij.modules.lang</depends>
     <depends>com.intellij.modules.platform</depends>
     <depends>com.intellij.modules.xml</depends>
-    <depends optional="true" config-file="withJava.xml">com.intellij.modules.java</depends>
+    <depends>DevKit</depends>
+    <depends>com.intellij.modules.java</depends>
 
     <extensions defaultExtensionNs="com.intellij">
         <multiHostInjector implementation="com.github.beansoft.devkit.helper.PluginHtmlInjector"/>
+        <!-- xml jump to class -->
+        <codeInsight.lineMarkerProvider id="beansoft.StatementLineMarkerProvider" language="XML"
+                                        implementationClass="com.github.beansoft.devkit.provider.PluginXmlLineMarkerProvider"/>
+        <!-- class jump to xml -->
+        <codeInsight.lineMarkerProvider language="UAST"
+                                        implementationClass="com.github.beansoft.devkit.navigation.ExtensionDeclarationRelatedItemLineMarkerProvider"
+                                        order="first"/>
 
+        <!--        <codeInsight.lineMarkerProvider language="JAVA"-->
+        <!--                                        implementationClass="com.github.beansoft.devkit.navigation.ExtensionPointDeclarationRelatedItemLineMarkerProvider" order="first"/>-->
     </extensions>
 
     <actions>
