Using java to rewritten ActionLocatorJava

--- a/devkit-helper/resources/META-INF/plugin.xml
+++ b/devkit-helper/resources/META-INF/plugin.xml
@@ -67,7 +67,7 @@
         <!-- xml jump to class -->
         <codeInsight.lineMarkerProvider id="beansoft.StatementLineMarkerProvider" language="XML"
                                         implementationClass="com.github.beansoft.devkit.provider.PluginXmlLineMarkerProvider"/>
-
+        <!-- find reference's real def -->
         <codeInsight.lineMarkerProvider id="beansoft.PluginXmlRefLineMarkerProvider" language="XML"
                                         implementationClass="com.github.beansoft.devkit.provider.PluginXmlRefLineMarkerProvider"/>
 
