--- a/devkit-helper/resources/META-INF/plugin.xml
+++ b/devkit-helper/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin>
     <id>com.github.beansoft.devkit.helper</id>
     <name>Plug-in DevKit Helper</name>
-    <version>2.1</version>
+    <version>2.2</version>
     <vendor email="beansoft@126.com" url="https://github.com/beansoft/visualgc_java8/issues">BeanSoft</vendor>
     <category>Plugin Development</category>
 
@@ -34,6 +34,11 @@
         ]]></description>
 
     <change-notes><![CDATA[
+        <h2>2.2</h2>
+        <ul>
+            <li>Cleanup the PSIViewerCopyable code.</li>
+            <li>Add Javadoc and annotation inline description.</li>
+        </ul>
         <h2>2.1</h2>
         <ul>
             <li>Integrate the PSIViewerCopyable code here.</li>
@@ -79,64 +84,19 @@
         <!--        <codeInsight.lineMarkerProvider language="JAVA"-->
         <!--                                        implementationClass="com.github.beansoft.devkit.navigation.ExtensionPointDeclarationRelatedItemLineMarkerProvider" order="first"/>-->
 
-        <!-- PSIViewer -->
-        <applicationConfigurable groupId="tools"
-                                 instance="idea.plugin.psiviewer.copyable.controller.application.Configuration"/>
-        <applicationService
-                serviceImplementation="idea.plugin.psiviewer.copyable.controller.application.PsiViewerApplicationSettings"/>
-        <toolWindow id="PsiViewerCopy" icon="/images/psiToolWindow.png" anchor="right"
-                    factoryClass="idea.plugin.psiviewer.copyable.controller.project.PsiViewerToolWindowFactory"/>
-        <projectService
-                serviceImplementation="idea.plugin.psiviewer.copyable.controller.project.PsiViewerProjectService"/>
+        <!-- Javadoc and annotation highlighter -->
+        <lang.foldingBuilder language="JAVA" implementationClass="com.github.beansoft.devkit.javadoc.JdcrFoldingBuilder"/>
+        <annotator language="JAVA" implementationClass="com.github.beansoft.devkit.javadoc.JdcrAnnotator"/>
+        <colorSettingsPage implementation="com.github.beansoft.devkit.javadoc.JdcrColorSettingsPage" />
+        <additionalTextAttributes scheme="Darcula" file="colorSchemes/JdcrLangDarcula.xml"/>
+        <additionalTextAttributes scheme="Default" file="colorSchemes/JdcrLangDefault.xml"/>
 
     </extensions>
 
     <actions>
-        <action class="idea.plugin.psiviewer.copyable.controller.actions.ViewElementAtCaretAction"
-                description="Display PSI tree for element at caret" icon="/images/psi18x18.png"
-                id="View PSI element at caret - devkit" text="View PSI element at caret">
-            <keyboard-shortcut first-keystroke="control shift C" keymap="$default"/>
-        </action>
-        <action class="idea.plugin.psiviewer.copyable.controller.actions.ViewFileElementAction"
-                description="Display PSI tree for this file" icon="/images/psi18x18.png"
-                id="View event PSI file - devkit" text="View PSI for entire file">
-            <keyboard-shortcut first-keystroke="control shift Q" keymap="$default"/>
-        </action>
-        <action class="idea.plugin.psiviewer.copyable.controller.actions.ViewCurrentElementAction"
-                description="Display PSI tree for event element" icon="/images/psi18x18.png"
-                id="View event PSI element - devkit"
-                text="View event PSI element">
-            <keyboard-shortcut first-keystroke="control shift P" keymap="$default"/>
-        </action>
-
-        <action class="idea.plugin.psiviewer.copyable.controller.actions.PsiDump" icon="/actions/dump.png"
-                id="idea.plugin.psiviewer.copyable.controller.actions.PsiDump" text="PSI dump to clipboard"/>
-
-        <action class="idea.plugin.psiviewer.copyable.controller.actions.PsiTestDump" icon="/actions/dump.png"
-                id="idea.plugin.psiviewer.copyable.controller.actions.PsiTestDump"
-                text="PSI unit test data file to clipboard"/>
-
-        <!--<action id="com.sylvanaar.idea.errorreporting.TriggerExceptionAction"-->
-        <!--class="com.sylvanaar.idea.errorreporting.TriggerExceptionAction" text="Trigger PsiViewer Exception">-->
-        <!--<add-to-group group-id="ToolsMenu" anchor="after" relative-to-action="PsiViewer"/>-->
-        <!--</action>-->
-
-        <group id="PsiViewerCopyableEditor" popup="true" text="PsiViewer">
-            <reference ref="View PSI element at caret - devkit"/>
-            <reference ref="View event PSI element - devkit"/>
-            <reference ref="View event PSI file - devkit"/>
-            <reference ref="idea.plugin.psiviewer.copyable.controller.actions.PsiDump"/>
-            <reference ref="idea.plugin.psiviewer.copyable.controller.actions.PsiTestDump"/>
-            <add-to-group anchor="last" group-id="EditorPopupMenu"/>
-        </group>
-
-        <group id="PsiViewerCopyableNonEditor" popup="true" text="PsiViewer">
-            <reference ref="View event PSI element - devkit"/>
-            <reference ref="View event PSI file - devkit"/>
-            <add-to-group anchor="last" group-id="ProjectViewPopupMenu"/>
-            <add-to-group anchor="last" group-id="StructureViewPopupMenu"/>
-        </group>
-
+<!--        <action id="test" class="com.github.beansoft.devkit.helper.MyAction" text="test" description="test action">-->
+<!--            <add-to-group group-id="WelcomeScreen.QuickStart" anchor="first"/>-->
+<!--        </action>-->
     </actions>
 
 </idea-plugin>
