add IDEA annotations

--- a/devkit-helper/resources/messages/JavaDocBundle.properties
+++ b/devkit-helper/resources/messages/JavaDocBundle.properties
@@ -46,3 +46,10 @@ org.jetbrains.annotations.NonNls=Non Nls
 com.intellij.openapi.util.NlsContexts.DetailedDescription=Nls Detailed Description
 com.intellij.openapi.util.NlsContexts.Tooltip=Nls Tooltip
 org.jetbrains.annotations.PropertyKey=Property Key
+com.intellij.openapi.util.NlsSafe=Nls Safe
+org.jetbrains.annotations.SystemIndependent=System Independent Path
+org.jetbrains.annotations.SystemDependent=System Dependent Path
+com.intellij.util.concurrency.annotations.RequiresBackgroundThread=Requires Background Thread
+com.intellij.util.concurrency.annotations.RequiresEdt=Requires Event Dispatch Thread
+com.intellij.util.concurrency.annotations.RequiresReadLock=Requires Read Lock
+com.intellij.util.concurrency.annotations.RequiresWriteLock=Requires Write Lock
