--- a/visualgc_java8/resources/visualgc.properties
+++ b/visualgc_java8/resources/visualgc.properties
@@ -42,7 +42,7 @@ visualgc.3.0.loading.jvm.process.list=VisualGC 3.0, Loading JVM process list...
 please.choose.a.process=Please choose a process
 a.visual.garbage.collection.monitoring.tool=a Visual Garbage Collection Monitoring Tool 
 info=Info
-this.tool.created.by=This tool created by https://github.com/beansoftapp/visualgc_java8
+this.tool.created.by=Created by  github.com/beansoft/visualgc_java8
 gc.policy.is.0=GC Policy is {0}
 double.click.a.jvm.process.to.start=Double click a JVM process to monitor
 jvm.browser=JVM Browser
