optimize CN translation and UI; Fix textarea dark theme display issue

--- a/visualgc_idea/resources/visualgc.properties
+++ b/visualgc_idea/resources/visualgc.properties
@@ -46,3 +46,5 @@ this.tool.created.by=Created by  github.com/beansoft/visualgc_java8
 gc.policy.is.0=GC Policy is {0}
 double.click.a.jvm.process.to.start=Double click a JVM process to monitor
 jvm.browser=JVM Browser
+stop.monitor=Stop Monitor
+show.reserved.space=Show Reserved Space
