--- a/visualgc_idea/resources/META-INF/plugin.xml
+++ b/visualgc_idea/resources/META-INF/plugin.xml
@@ -1,13 +1,13 @@
 <idea-plugin>
   <id>com.github.beansoftapp.visualgc.plugin</id>
   <name>VisualGC</name>
-  <version>2021.3.0</version>
+  <version>2021.3.1</version>
   <vendor email="beansoft@126.com" url="https://github.com/beansoft/visualgc_java8">BeanSoft</vendor>
 
   <description><![CDATA[
   <h2>Visual Garbage Collection Monitoring Tool for Hotspot JVM</h2>
       This plugin displayed a Visual GC tool window in your IDE, only supports HotSpot JVM(JDK 1.5 to OpenJDK/Oracle JDK 17).
-  Enhancemented: monitoring the detailed GC activity eg G1 stop the world full connection time.<br>
+  New feature: monitoring the detailed GC activity eg G1 stop the world full connection time.<br>
       Usage: 1. From main interface bottom;<br>
       2. From menu Tools > New VisualGC Window.<br>
 <br>
@@ -18,18 +18,19 @@
   增强功能: 允许监控详细的GC活动例如 G1 Full GC 消耗时间.<br><br>
 用法:<br>
 1) 点击停靠窗口下方的 VisualGC;<br>
-2) 打开新的独立运行窗口使用菜单 Tools > New VisualGC Window.<br>
+2) 打开新的独立运行窗口使用菜单 Tools > 新建 VisualGC 窗口.<br>
       <h2>ISSUES</h2>
 <p>
 <a href='https://github.com/beansoft/visualgc_idea/issues'>Submit Suggestions or Bugs</a></p>
-  Refs:<br>
-<a href='https://www.oracle.com/java/technologies/visual-garbage-collection-monitoring-tool.html'>VisualGC documents on Oracle.com</a><br>
-  <a href='https://www.oracle.com/java/technologies/jvmstat.html'>jvmstat 3.0</a>
     ]]></description>
 
   <change-notes>
     <![CDATA[
       <ul>
+        <li><b>Note:</b>This plugin will be changed to optional donate mode after Jan 1 2022,
+          yet all functions are still free. 本插件计划在2022年1月1日后修改为接受捐赠的版本, 以便更好的优化插件界面,
+          但所有功能依然保持免费(捐赠与否不影响使用).</li>
+        <li><b>2021.3.1</b> Fix NPE(修复空指针); Add tool window icon to easy open new window(工具窗增加打开新窗口按钮).</li>
         <li><b>2021.3</b> Move tool window to top right; fix display issue in Dark theme and chart grid color; easy to view context menu "Show Reserved Space".
           移动图表到右侧；适配暗色模式下的界面显示问题，优化网格颜色和文字显示；简化显示右键菜单"显示已预留空间"; 优化中文翻译。</li>
         <li><b>1.0.3</b> Add toolbar icons, move tool window to bottom, fix a package issue which in 1.0.2.</li>
@@ -46,19 +47,19 @@
        on how to target different products -->
   <depends>com.intellij.modules.platform</depends>
 
+  <!-- for action i10n messages -->
+  <resource-bundle>visualgc</resource-bundle>
+
   <extensions defaultExtensionNs="com.intellij">
-    <toolWindow id="VisualGC" secondary="true" icon="/visualgc.png" anchor="right"
+    <toolWindow id="VisualGC" secondary="true" icon="PluginIcons.visualgcToolWindow" anchor="right"
                 factoryClass="com.github.beansoftapp.visualgc.idea.VisualGCToolWindowFactory"/>
   </extensions>
 
   <actions>
-    <action id="VisualGC" class="com.github.beansoftapp.visualgc.idea.VisualGCAction" text="New VisualGC Window"
-            description="Open a new visualGC window">
+    <action id="VisualGC" class="com.github.beansoftapp.visualgc.idea.VisualGCAction"
+            icon="AllIcons.Actions.MoveToWindow">
       <add-to-group group-id="ToolsMenu" anchor="last"/>
     </action>
-<!--    <action id="new_tool_window" class="com.beansoft.NewWindowAction" text="New Window">-->
-<!--      <add-to-group group-id="ToolsMenu" anchor="last"/>-->
-<!--    </action>-->
   </actions>
 
 </idea-plugin>
