--- a/visualgc_idea/resources/visualgc.properties
+++ b/visualgc_idea/resources/visualgc.properties
@@ -48,3 +48,5 @@ double.click.a.jvm.process.to.start=Double click a JVM process to monitor
 jvm.browser=JVM Browser
 stop.monitor=Stop Monitor
 show.reserved.space=Show Reserved Space
+action.VisualGC.text=New VisualGC Window
+action.VisualGC.description=Open a new visualGC window
