--- a/visualgc_idea/resources/visualgc.properties
+++ b/visualgc_idea/resources/visualgc.properties
@@ -42,11 +42,13 @@ visualgc.3.0.loading.jvm.process.list=VisualGC 3.0, Loading JVM process list...
 please.choose.a.process=Please choose a process
 a.visual.garbage.collection.monitoring.tool=a Visual Garbage Collection Monitoring Tool 
 info=Info
-this.tool.created.by=Created by  github.com/beansoft/visualgc_java8
+this.tool.created.by=Created by github.com/beansoft/visualgc_java8
 gc.policy.is.0=GC Policy is {0}
 double.click.a.jvm.process.to.start=Double click a JVM process to monitor
 jvm.browser=JVM Browser
 stop.monitor=Stop Monitor
 show.reserved.space=Show Reserved Space
 action.VisualGC.text=New VisualGC Window
-action.VisualGC.description=Open a new visualGC window
+action.VisualGC.description=Open a new VisualGC window
+action.visualgc.MakeCoffeeAction.text=Donate to VisualGC
+action.visualgc.MakeCoffeeAction.description=Donate to support future dev of VisualGC, plugin is always free to use
